<resources>
    <string name="app_name">Clothes Skin for RBX</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="language">Language</string>

    <string name="title_1">Customize your clothes</string>
    <string name="title_2">Diverse clothing collection</string>
    <string name="title_3">Fantasy clothes</string>

    <string name="title_how_1">Open the official RBX website in Google Chrome</string>
    <string name="title_how_2">Open page “Create”</string>
    <string name="title_how_3">Turn on “Desktop site”</string>
    <string name="title_how_4">Section for loading skins</string>
    <string name="title_how_5">Upload to RBX</string>
    <string name="title_how_6">Go to “Gallery” and select the skin file</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">I need your love</string>

    <string name="one_star_title">Little buddy made me cry</string>
    <string name="one_star">I will cry all day</string>

    <string name="two_star_title">I’m a little sad</string>
    <string name="two_star">I will not eat rice today</string>

    <string name="three_star_title">Great job little buddy</string>
    <string name="three_star">I know you won\'t let me be sad</string>

    <string name="four_star_title">You are so handsome</string>
    <string name="four_star">The prince is so handsome</string>

    <string name="five_star_title">I love you so much</string>
    <string name="five_star">let\'s get married</string>

    <string name="rate_us_0">You have not rated it yet!</string>

    <string name="rate">Rate</string>
    <string name="exit">Exit</string>

    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>

    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="download_success">Download successful to the RBX Skins album</string>
    <string name="no_item_is_here">No Item Here</string>

    <string name="save">Save</string>
    <string name="done">Done</string>

    <string name="please_select_an_image">Please select an image</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="downloading">Downloading...</string>

    <string name="my_creation">My Creation</string>
    <string name="your_costume_isn_t_finished_yet_you_still_want_to_exit">Your costume isn\'t finished yet, you still want to exit?</string>
    <string name="loading">Loading...</string>
    <string name="bro_please_wait_a_moment">Bro, please wait a moment.</string>
    <string name="basic_skin">Basic Skin</string>
    <string name="advanced_skin">Advanced Skin</string>
    <string name="shirt">Shirt</string>
    <string name="see_all">See all</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="pant">Pant</string>
    <string name="how_to_use_clothes_for_rbx">How to use \nClothes for RBX?</string>
    <string name="let_s_go">Let’s go</string>
    <string name="customize">Customize</string>
    <string name="add_to_my_creation">Add to My Creation</string>
    <string name="add_to_my_creation_successfully">Add to My Creation successfully</string>
    <string name="you_ve_already_added_it_to_my_creations">You\'ve already added it to My Creations.</string>
    <string name="view">View</string>
    <string name="an_error_occurred_please_try_again_later">An error occurred, please try again later!</string>
    <string name="choose_color">Choose Color</string>
    <string name="clothes_skins_maker_for_rbx">Clothes Skins Maker For RBX</string>
    <string name="next">Next</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special_clothes">Special Clothes</string>
    <string name="special">Special</string>
    <string name="clothes">Clothes</string>
    <string name="accessory">accessory</string>
    <string name="basic_clothes">Basic Clothes</string>
    <string name="trending">Trending</string>
    <string name="please_check_your_network_connection">Please check your network connection.</string>
</resources>