<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_F5F5F5"
    android:orientation="vertical">

    <!--    tvTitle-->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:textColor="@color/blue_000D4C"
        android:textSize="20sp" />

    <!--        btnLanguage-->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_4_solid_white">

            <ImageView
                android:id="@+id/imvIconLang"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_language_set" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imvIconLang"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start"
                android:text="@string/language"
                android:textColor="@color/blue_000D4C"
                android:textSize="14sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--        btnRate-->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnRate"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_4_solid_white">

            <ImageView
                android:id="@+id/imvRate"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_rate_set" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imvRate"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start"
                android:text="@string/rate_us"
                android:textColor="@color/blue_000D4C"
                android:textSize="14sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--        btnShare-->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_4_solid_white">

            <ImageView
                android:id="@+id/imvShare"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_share_set" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imvShare"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start"
                android:text="@string/share_app"
                android:textColor="@color/blue_000D4C"
                android:textSize="14sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <!--        btnPolicy-->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnPolicy"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_4_solid_white">

            <ImageView
                android:id="@+id/imvPolicy"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_policy_set" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/imvPolicy"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="start"
                android:text="@string/privacy_policy"
                android:textColor="@color/blue_000D4C"
                android:textSize="14sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>