<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.skin.basic.BasicActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_app_background" />

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    btnShirt-->
    <ImageView
        android:id="@+id/btnShirt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_basic_1"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/shirt"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/btnShirt"
        app:layout_constraintTop_toTopOf="@+id/btnShirt" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShirt"
        app:layout_constraintEnd_toEndOf="@+id/btnShirt">

        <include layout="@layout/layout_see_all" />
    </FrameLayout>

    <!--    btnTShirt-->
    <ImageView
        android:id="@+id/btnTShirt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_basic_2"
        app:layout_constraintTop_toBottomOf="@+id/btnShirt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/t_shirt"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/btnTShirt"
        app:layout_constraintTop_toTopOf="@+id/btnTShirt" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTShirt"
        app:layout_constraintEnd_toEndOf="@+id/btnTShirt">

        <include layout="@layout/layout_see_all" />
    </FrameLayout>

    <!--    btnPant-->
    <ImageView
        android:id="@+id/btnPant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_basic_3"
        app:layout_constraintTop_toBottomOf="@+id/btnTShirt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/pant"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPant"
        app:layout_constraintTop_toTopOf="@+id/btnPant" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPant"
        app:layout_constraintEnd_toEndOf="@+id/btnPant">

        <include layout="@layout/layout_see_all" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>